Fix top bar spacing bug caused by chips

--- a/kahuna/public/js/components/gr-top-bar/gr-top-bar.css
+++ b/kahuna/public/js/components/gr-top-bar/gr-top-bar.css
@@ -14,6 +14,7 @@ gr-top-bar-nav {
 
 gr-top-bar-actions {
     display: flex;
+    min-width: 278px;
     flex-direction: row;
     justify-content: flex-end;
 }
